# Korgi3D

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CodingConvention.md  README.md  output_animation.txt
docs/: resources.md
editor/: Application.cpp  Application.h  CMakeLists.txt  ImguiUtils.h  TileMapEditor.cpp  TileMapEditor.h  config.h.in  font.cpp  font.h  main.cpp
editor/Dialogs/: JSonSelectionDialog.cpp  JSonSelectionDialog.h  TextureSelectionDialog.cpp  TextureSelectionDialog.h
editor/Models/: SceneModel.h
editor/Widgets/: Canvas.cpp  Canvas.h  GameWidget.cpp  GameWidget.h  PropertyWidget.cpp  PropertyWidget.h  ResourceWidget.cpp  ResourceWidget.h  SceneWidget.cpp  SceneWidget.h  TilesetCreationWidget.cpp  TilesetCreationWidget.h  TreeItem.cpp  TreeItem.h  Widget.cpp  Widget.h
editor/ext/imgui/: CMakeLists.txt  imgui_demo.cpp
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
resources/: TestDeath.aseprite  TestDeath.json  TestMap.json  enemy.aseprite  poof.json  qsdqsd.tsx  r.tsx  sans titre..tmx  sans titre.tmx  small_shadow_1.tex  ss.tsx  tileset.tsx
resources/materials/unlit/: unlit_color_vs.glsl  unlit_texture.mat  unlit_texture_vs.glsl
src/: config.h.in
src/corgi/: CMakeLists.txt
src/corgi/components/: Animator.cpp  Animator.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  ColliderComponent.cpp  ColliderComponent.h  MeshCollider.cpp  MeshCollider.h  MeshRenderer.cpp  MeshRenderer.h  Panel.h  ParticleEmitter.cpp  ParticleEmitter.h  RendererComponent.h  SpriteRenderer.cpp  SpriteRenderer.h  StateMachine.cpp  StateMachine.h  Text.h  TextRenderer.cpp  TextRenderer.h  Tilemap.cpp  Tilemap.h  Transform.cpp  Transform.h
src/corgi/containers/: CMakeLists.txt
src/corgi/containers/tests/: CMakeLists.txt  Component.h
src/corgi/containers/tests/unit/: EmptyTree.cpp  FilledTree.cpp
src/corgi/ecs/: CMakeLists.txt  sfd.md
src/corgi/ecs/include/corgi/ecs/: Component.h  ComponentPool.h  ComponentPools.h  Entities.h  Entity.h  Layer.h  Scene.h  System.h  Systems.h
src/corgi/ecs/src/: Component.cpp  ComponentPools.cpp  Entities.cpp  Entity.cpp  Scene.cpp  System.cpp
src/corgi/ecs/tests/: CMakeLists.txt
src/corgi/ecs/tests/unit/: TestECS.cpp
src/corgi/filesystem/: CMakeLists.txt
src/corgi/filesystem/src/: Document.cpp  FileSystem.cpp
src/corgi/filesystem/tests/unit/: CMakeLists.txt
src/corgi/filesystem/tests/unit/src/: CMakeLists.txt  TestFileSystem.cpp
src/corgi/glad/: glad.c
src/corgi/inputs/: GamePad.h  Gamepad.cpp  Inputs.cpp  Inputs.h  Keyboard.cpp  Keyboard.h  WindowManager.cpp  WindowManager.h
src/corgi/logger/: CMakeLists.txt
src/corgi/logger/include/corgi/logger/: log.h
src/corgi/logger/src/: CMakeLists.txt  log.cpp
src/corgi/logger/tests/: CMakeLists.txt
src/corgi/main/: AudioPlayer.cpp  AudioPlayer.h  GLFWWindow.cpp  Game.cpp  Game.h  Settings.cpp  Settings.h  Window.cpp  Window.h  corgi_pch.h
src/corgi/math/: CMakeLists.txt  Collisions.cpp  Collisions.h  MathUtils.cpp  MathUtils.h  Matrix.cpp  Ray.cpp  Ray.h  install.bat
src/corgi/math/UnitTests/: CMakeLists.txt
src/corgi/math/detail/: Vec3.h
src/corgi/math/include/corgi/math/: Matrix.h  Vec2.h  Vec3.h  easing.h  rectangle.h
src/corgi/math/include/corgi/math/detail/: Vec2.h  Vec3.h  Vec4.h
src/corgi/math/src/: CMakeLists.txt  Collisions.cpp  MathUtils.cpp  Matrix.cpp  Ray.cpp
src/corgi/math/tests/: CMakeLists.txt  UTVector2f.cpp  UTVector3f.cpp
src/corgi/memory/: CMakeLists.txt
src/corgi/rapidjson/: CMakeLists.txt
src/corgi/rendering/: Color.cpp  Color.h  FrameBuffer.cpp  FrameBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PostProcessing.cpp  PostProcessing.h  RenderCommand.cpp  RenderCommand.h  Shader.cpp  Shader.h  Shaders.h  Sprite.h  renderer.cpp  renderer.h  texture.cpp  texture.h
src/corgi/resources/: Animation.h  Font.cpp  Font.h  Sound.cpp  Sound.h  image.cpp
src/corgi/string/: CMakeLists.txt
src/corgi/string/include/corgi/string/: String.h
src/corgi/string/src/: CString.cpp  String.cpp
src/corgi/string/tests/unitTest/: CMakeLists.txt  UTCString.cpp  UTString.cpp
src/corgi/systems/: AnimationSystem.h  CollisionSystem.cpp  CollisionSystem.h  ParticleEmitterSystem.h  RenderingSystem.h  StateMachineSystem.cpp  StateMachineSystem.h  TransformSystem.cpp  TransformSystem.h
src/corgi/test/: .travis.yml  CMakeLists.txt  install.bat
src/corgi/test/include/corgi/test/: test.h
src/corgi/test/test/: CMakeLists.txt  TestA.cpp  TestB.cpp  test_fixture.cpp
src/corgi/ui/: Canvas.cpp  Canvas.h
src/corgi/utils/: AsepriteImporter.cpp  AsepriteImporter.h  EntityPool.cpp  EntityPool.h  Event.h  Physic.cpp  Physic.h  ResourcesLoader.cpp  ResourcesLoader.h  TiledImporter.cpp  TiledImporter.h  TimeHelper.cpp  TimeHelper.h  Utils.h  types.h
tests/: CMakeLists.txt
tests/AutomatedTests/: CMakeLists.txt
tests/AutomatedTests/TestRun/: CMakeLists.txt  TestRun.cpp  config.h.in
tests/data_alignment/: CMakeLists.txt  DataAlignment.cpp
tests/ecs/: CMakeLists.txt  TestECS.cpp  TestEntity.cpp
tests/multithreading/: CMakeLists.txt  TestMultithreading.cpp
tests/transform_system/: CMakeLists.txt  TestTransformSystem.cpp
tools/: CMakeLists.txt
tools/FontExporter/: CMakeLists.txt  FontExporter.cpp  FontLoader.cpp  FontLoader.h  readme
tools/FontExporter/ext/freetype/: freetype240.lib
tools/FontExporter/test/: CMakeLists.txt  FontExporterTest.cpp
tools/ResourcesPackager/: CMakeLists.txt
tools/ResourcesPackager/include/: CMakeLists.txt  ResourcesPackager.h  stb_truetype.h
tools/ResourcesPackager/src/: CMakeLists.txt  ResourcesPackager.cpp  ResourcesPackager.h  ResourcesPackagerMain.cpp
tools/ResourcesPackager/tests/: CMakeLists.txt  config.h.in
tools/ResourcesPackager/tests/resources/animations/: enemy.json
tools/ResourcesPackager/tests/resources/images/: tileset.tex
tools/ResourcesPackager/tests/resources/materials/: unlit_color.mat
tools/ResourcesPackager/tests/resources/shaders/: unlit_texture_fs.glsl
tools/ResourcesPackager/tests/src/: CMakeLists.txt  TestResourcesPackager.cpp
(+6 files in other folders)
